--- a/index.html
+++ b/index.html
@@ -1,30 +1,34 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Data Science Portfolio | Your Name</title>
-    <meta name="description" content="Data Scientist & Analyst specializing in machine learning, data visualization, and predictive analytics. Explore my projects and skills." />
-    <meta name="author" content="Your Name" />
-    <meta name="keywords" content="data science, machine learning, data analyst, portfolio, python, SQL, tableau" />
-    
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="Data Science Portfolio | Your Name" />
-    <meta property="og:description" content="Data Scientist & Analyst specializing in machine learning and data visualization" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Data Science Portfolio | Cheng Wei Lun</title>
+  <meta name="description"
+    content="Data Scientist & Analyst specializing in machine learning, data visualization, and predictive analytics. Explore my projects and skills." />
+  <meta name="author" content="Cheng Wei Lun" />
+  <meta name="keywords" content="data science, machine learning, data analyst, portfolio, python, SQL, tableau" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@yourusername" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta property="og:title" content="Data Science Portfolio | Cheng Wei Lun" />
+  <meta property="og:description"
+    content="Data Scientist & Analyst specializing in machine learning and data visualization" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@yourusername" />
+  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
