--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Data Science Portfolio | Cheng Wei Lun</title>
+  <title>Cheng Wei Lun's Portfolio Website</title>
   <meta name="description"
     content="Data Scientist & Analyst specializing in machine learning, data visualization, and predictive analytics. Explore my projects and skills." />
   <meta name="author" content="Cheng Wei Lun" />
